--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: LTHoriZonT
+          github_user_name: iHoriZonT
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
       - run: git status
